[gd_scene load_steps=5 format=3 uid="uid://5xgr8v8mcm5k"]

[ext_resource type="Script" uid="uid://0bdpuxjxmqwl" path="res://character_body_2d.gd" id="1_0oef7"]
[ext_resource type="Texture2D" uid="uid://b3w6pddj8nt78" path="res://pngwing.com (10).png" id="2_cn7kt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_epypp"]
radius = 85.0529

[sub_resource type="CircleShape2D" id="CircleShape2D_0oef7"]
radius = 79.2275

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_0oef7")

[node name="Pngwing_com(10)" type="Sprite2D" parent="."]
position = Vector2(18, 34.0001)
rotation = -0.150862
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_cn7kt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 19)
shape = SubResource("CircleShape2D_epypp")

[node name="WaterDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetector"]
position = Vector2(30, 19)
shape = SubResource("CircleShape2D_0oef7")
debug_color = Color(0.837622, 0.312714, 0.585028, 0.42)

[connection signal="area_entered" from="WaterDetector" to="." method="_on_water_detector_area_entered"]
[connection signal="area_exited" from="WaterDetector" to="." method="_on_water_detector_area_exited"]
[connection signal="body_entered" from="WaterDetector" to="." method="_on_water_detector_body_entered"]
[connection signal="body_exited" from="WaterDetector" to="." method="_on_water_detector_body_exited"]
